# yolov8-ros2

./: README.md  requirements.txt
yolov8_launch/: CMakeLists.txt  package.xml
yolov8_launch/launch/: yolov8_foxy.launch.py
yolov8_main/: package.xml  setup.cfg  setup.py
yolov8_main/yolov8_main/: yolov8_node.py
yolov8_msg/: CMakeLists.txt  package.xml
yolov8_msg/msg/: BoundingBox.msg  Mask.msg  Point2D.msg  Yolov8Inference.msg  Yolov8InferenceMsg.msg
