<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_launch</name>
  <version>0.0.1</version>
  <description>yolov8 launch for ros2 foxy version</description>
  <maintainer email="qorskfo1023@hanmail.net">ban2aru</maintainer>
  <license>AGPL-3.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>yolov8_main</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
